force-app/main/default/objects/RCV_Quote_Verbiage_Exception_Override__c/RCV_Quote_Verbiage_Exception_Override__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>RCV Quote Verbiage Exception Override</label>
</CustomObject>