force-app/main/default/objects/RCV_Quote_Verbiage_Exception_Override__c/fields/Overridden_CVA_Standard_Zone_1_Verbiage__c.field-meta.xml
<CustomField>
    <fullName>Overridden_CVA_Standard_Zone_1_Verbiage__c</fullName>
    <label>Overridden CVA-Standard Zone 1 Verbiage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>