force-app/main/default/objects/RCV_Quote_Verbiage_Exception_Override__c/fields/Overridden_CVB_Standard_Zone_2_Verbiage__c.field-meta.xml
<CustomField>
    <fullName>Overridden_CVB_Standard_Zone_2_Verbiage__c</fullName>
    <label>Overridden CVB-Standard Zone 2 Verbiage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>