force-app/main/default/objects/RCV_Quote_Verbiage_Exception_Override__c/fields/Override_CVA_Standard_Zone_2_Verbiage__c.field-meta.xml
<CustomField>
    <fullName>Override_CVA_Standard_Zone_2_Verbiage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override CVA - Standard Zone 2 Verbiage?</label>
    <type>Checkbox</type>
</CustomField>