force-app/main/default/objects/RCV_Quote_Verbiage_Exception_Override__c/fields/Override_CVB_Standard_Zone_1_Verbiage__c.field-meta.xml
<CustomField>
    <fullName>Override_CVB_Standard_Zone_1_Verbiage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override CVB - Standard Zone 1 Verbiage?</label>
    <type>Checkbox</type>
</CustomField>